--- a/loans-ui/loans-ui/package.json
+++ b/loans-ui/loans-ui/package.json
@@ -12,14 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.6",
+    "@angular/cdk": "^11.2.5",
     "@angular/common": "~11.2.6",
     "@angular/compiler": "~11.2.6",
     "@angular/core": "~11.2.6",
     "@angular/forms": "~11.2.6",
+    "@angular/material": "^11.2.5",
     "@angular/platform-browser": "~11.2.6",
     "@angular/platform-browser-dynamic": "~11.2.6",
     "@angular/router": "~11.2.6",
     "bootstrap": "^5.0.0-beta2",
+    "boxicons": "^2.0.7",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
